--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -4,14 +4,14 @@
 
 // COLORS
 
-// *** Primary :
+// *** Primary
 $black: #222222;
 $white: #ffffff;
 $background: #f9faff;
 
 // *** Secondary
 
-// *** Gradient :
+// *** Gradient
 $gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
 
 // FONTS
