--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,3 +8,14 @@
 .app {
 	font-family: $font;
 }
+
+.content-wrapper {
+	padding: 0 16px;
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1224px;
+
+	@include large {
+		padding: 0;
+	}
+}
