--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -5,15 +5,22 @@
 // COLORS
 
 // *** Primary
-$black: #222222;
-$white: #ffffff;
-$background: #f9faff;
+$blue: #23a1f5;
+$malibuBlue: #758bfd;
+$darkBlue: #274690;
+$green: #45be93;
 
 // *** Secondary
+$white: #ffffff;
+$background: #f9faff;
 $grey: #808a9f;
+$black: #222222;
+
+// *** System
+$red: #f71735;
 
 // *** Gradient
-$gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
+// $gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
 
 // FONTS
 $font: 'Inter', sans-serif;
@@ -42,6 +49,3 @@ $wide: 1600px;
 		@content;
 	}
 }
-
-// GLOBAL
-$headerHeight: 80px;
