--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -9,6 +9,7 @@ $blue: #23a1f5;
 $malibuBlue: #758bfd;
 $darkBlue: #274690;
 $green: #45be93;
+$midnight: #001E3C;
 
 // *** Secondary
 $white: #ffffff;
@@ -23,7 +24,8 @@ $red: #f71735;
 // $gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
 
 // FONTS
-$font: 'Inter', sans-serif;
+$font: 'Inter',
+sans-serif;
 
 // BREAKPOINTS
 $medium: 768px;
