finish homepage content

--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -14,7 +14,9 @@ $midnight: #001e3c;
 // *** Secondary
 $white: #ffffff;
 $background: #f9faff;
-$blueBackground: #274690;
+$greyBackground: #EFF1F8;
+$blueBackground: #0E3056;
+$darkBlueBackground: #001E3C;
 $grey: #808a9f;
 $black: #222222;
 
