--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -14,6 +14,9 @@ $midnight: #001e3c;
 // *** Secondary
 $white: #ffffff;
 $background: #f9faff;
+$greyBackground: #EFF1F8;
+$blueBackground: #0E3056;
+$darkBlueBackground: #001E3C;
 $grey: #808a9f;
 $black: #222222;
 
@@ -24,7 +27,8 @@ $red: #f71735;
 // $gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
 
 // FONTS
-$font: 'Inter', sans-serif;
+$font: 'Inter',
+sans-serif;
 
 // BREAKPOINTS
 $medium: 768px;
