FEATURE: Style page initiativesDetails

--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -22,6 +22,7 @@ $black: #222222;
 
 // *** System
 $red: #f71735;
+$greyLight: rgba(0, 30, 60, 0.3);
 
 // *** Gradient
 // $gradient: linear-gradient(270deg, #64e0b9 0%, #4451c4 100%);
