--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,3 +25,12 @@ main {
 		padding: 0;
 	}
 }
+
+.cta {
+	&__link {
+		display: inline-block;
+		padding: 14px 20px;
+		width: 100%;
+		max-width: 288px;
+	}
+}
